[package]
name = "pairing_ce"

# Remember to change version string in README.md.
version = "0.19.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/matter-labs/pairing"
repository = "https://github.com/matter-labs/pairing"
edition = "2018"

[dependencies]
sgx_rand = { version = "1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }
sgx_tstd = { version = "1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git" }

byteorder = { git = "https://github.com/eduadiez/byteorder.git" }
ff = { package="ff_ce", git = "https://github.com/eduadiez/ff_ce-sgx", features = ["derive"] }

[features]
expose-arith = []
default = []
