[package]
name = "pairing_ce"

# Remember to change version string in README.md.
version = "0.19.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/matter-labs/pairing"
repository = "https://github.com/matter-labs/pairing"
edition = "2018"

[dependencies]
byteorder = { tag = "sgx_1.1.0", git = "https://github.com/mesalock-linux/byteorder-sgx.git" }
ff = { package = "ff_ce", git="https://github.com/eduadiez/ff_ce-sgx.git", features = ["derive"]}

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.1.0", optional = true }
sgx_rand = { version = "1.1.0" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_tstd = { version = "1.1.0" }

[features]
default = ["std","mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["std", "sgx_tstd"]
